--- a/book-search/package.json
+++ b/book-search/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shruthisalimath/BookSearch-MERN.git"
+    "url": "git+https://github.com/josh4got/BookSearch.git"
   },
   "keywords": [],
   "author": "",
